data analysis examples

--- a/10718_s2026/lectures.yaml
+++ b/10718_s2026/lectures.yaml
@@ -11,7 +11,9 @@
 # Week 2
 
 # MLK day
-- title: State of ML
+- title: Data Preparation
+  summary: Scraping, Data Integration, Visualization
+  
 
 # Week 3
 
