--- a/10718_s2026/config.yaml
+++ b/10718_s2026/config.yaml
@@ -1,17 +1,19 @@
 # for getting the dates of each lecture
-CLASS_NUM: 10-718
-DATES_WITH_NO_CLASS:
-- [1, 19]
-- [3, 3]
-- [3, 5]
-- [4, 9]
-END_DATE: [4, 24]
-LECTURE_DAY_OF_WEEK: 1
-LECTURES_PER_WEEK: 2
-START_DATE: [1, 12]
-YEAR: 2026
-# for generating HTML version of schedule
-BASEDIR: .
-SCHEDULE_FILE: schedule.html
-HEADER: schedule_head.html
-FOOTER: schedule_foot.html
+class_num: '10-718'
+dates_without_class:
+ - month: 1
+   date: 19
+ - month: 3
+   date: 3
+ - month: 3
+   date: 5
+ - month: 4
+   date: 9
+start_date: 
+   month: 1
+   date: 12
+end_date: 
+   month: 4
+   date: 24
+lecture_days: [1, 3]  # Mon = 1
+year: 2026
