more lectures planned

--- a/10718_s2026/Makefile
+++ b/10718_s2026/Makefile
@@ -1,2 +1,5 @@
-schedule:
+schedule.html: util.py lectures.yaml slides.yaml config.yaml
 	python3 util.py html
+
+syllabus:
+	python3 util.py syllabus
