added value: mentimeter url

--- a/10718_s2026/lectures.yaml
+++ b/10718_s2026/lectures.yaml
@@ -7,6 +7,7 @@
   slide_link: https://docs.google.com/presentation/d/1KbAJiSjIyrG37v42gRBrpCmGObkyi4byqxh-0T5Dtik/edit?slide=id.g1ef2a953916_0_349#slide=id.g1ef2a953916_0_349
   content:
     - value: kv-caching.gslides
+    - value: https://www.menti.com/alqmehfq1182
 
 - title: ML Project Deep Dive
   status: 39s ready
