--- a/10718_s2026/lectures.yaml
+++ b/10718_s2026/lectures.yaml
@@ -74,6 +74,7 @@
 # week 4
 
 - title: Hyperparameter tuning
+  slide_link: https://docs.google.com/presentation/d/1ANAFFiAU6BzFVvzKcyhfbnNhcKCA9mRQ/edit?slide=id.p1#slide=id.p1
   readings:
   - https://dl.acm.org/doi/abs/10.1145/3097983.3098043: "Google Vizier: A Service for Black-Box Optimization (KDD 2017)"
   - https://arxiv.org/abs/2205.13504: "Are Transformers Effective for Time Series Forecasting? (AAAI 2023)"
@@ -82,7 +83,8 @@
   - deck_tag: hyperparam.pptx
 
 - title: Interpretability and Monitorability
-  status: no slides
+  status: done
+  slide_link: https://docs.google.com/presentation/d/1AjaFWLo9Bbuz-VzqB1NcE62vt4Vkfhe0/edit?slide=id.p1#slide=id.p1
   readings:
   - https://spawn-queue.acm.org/doi/pdf/10.1145/3236386.3241340: The Mythos of Interpretability, Lipton 2018
   - https://arxiv.org/abs/2512.18311: "Monitoring Monitorability, Guan et al 2025"
@@ -105,10 +107,11 @@
   status: SLIDES TO DO
   readings:
     - https://digitalcommons.unl.edu/cgi/viewcontent.cgi?article=1317&context=edpsychpapers: "Essay Review of The Enigma of Reason by Hugo Mercier and Dan Sperberof Reason, by Mercier and Sperber" 
-    - 3d500d31738cd39eb49a748fa4-Paper-Conference.pdf: "Learning to Scaffold: Optimizing Model Explanations for Teaching, Fernandes et al, 2022"
+    - https://arxiv.org/abs/2204.10810: "Learning to Scaffold: Optimizing Model Explanations for Teaching, Fernandes et al, 2022"
 
 - title: Network Effects and ML
-  status: CUT DOWN ppi
+  status: done (18)
+  slide_link: https://docs.google.com/presentation/d/1KTNKxEachgvrI81JnjV33ccfivU9Awdi/edit?slide=id.p23#slide=id.p23
   content:
    - deck_tag: network.gslides
   readings: 
