--- a/10718_s2026/slides.yaml
+++ b/10718_s2026/slides.yaml
@@ -1,5 +1,20 @@
 # Database of info on slide decks for individual "modules"
 
+interp.gslides:
+ links:
+  - https://arxiv.org/pdf/1909.07913: Learning to Decieve with Attention-Based Explanations, 2020
+  - https://arxiv.org/pdf/2308.14272: Goodhart’s Law Applies to NLP’s Explanation Benchmarks. 2023
+  
+
+cot.gslides:
+ summary: ripper, turpin et al, khambapati
+ links:
+  - https://proceedings.neurips.cc/paper_files/paper/2023/hash/ed3fea9033a80fea1376299fa7863f4a-Abstract-Conference.html: "LMs Don't Always Say What They Think: Unfaithful Explanations in CoT, Turpin et al 2023"
+  - https://arxiv.org/pdf/2505.13792: "Interpretable Traces, Unexpected Outcomes: Bhambri et 2025"
+  - https://arxiv.org/pdf/2505.13775: "Beyond Semantics: Reasonless Reasoning Tokens, Valmeekam et al, 2025"
+  - https://nyaspubs.onlinelibrary.wiley.com/doi/abs/10.1111/nyas.15339: "(How) Do reasoning models reason? Kambhampati et al, 2025"
+  - https://arxiv.org/abs/2505.24217: "Semi-structured LLM Reasoners Can Be Rigorously Audited, Leng et al 2025"
+
 network.gslides:
   summary: discussion, info cascade, watts science paper, schelling
   links:
